--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -187,10 +187,12 @@ resources:
       Properties:
         TableName: ${self:provider.environment.CONNECTIONS_TABLE}
         AttributeDefinitions:
+          - AttributeName: 'userId'
+            AttributeType: S
           - AttributeName: 'connectionId'
             AttributeType: S
         KeySchema:
-          - AttributeName: 'connectionId'
+          - AttributeName: 'userId'
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
 
