--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -10,7 +10,7 @@ provider:
   environment:
     TRIPS_TABLE: TripsTable
     USERS_TABLE: UsersTable
-    CONNECTIONS_TABLE: ConnectionsTable
+    CONNECTIONS_TABLE: ConnectionsTable_v3
     MESSAGES_TABLE: MessagesTable
     DRIVERS_TABLE: DriversTable
     PYTHONPATH: '/var/task:${PYTHONPATH}'
@@ -192,7 +192,7 @@ resources:
           - AttributeName: 'connectionId'
             AttributeType: S
         KeySchema:
-          - AttributeName: 'connectionId'
+          - AttributeName: 'userId'
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         GlobalSecondaryIndexes:
