--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -12,8 +12,8 @@ provider:
     USERS_TABLE: UsersTable
     CONNECTIONS_TABLE: ConnectionsTable
     MESSAGES_TABLE: MessagesTable
-    DRIVERS_TABLE: DriversTable
-    PYTHONPATH: '/var/task:${PYTHONPATH}'
+    DRIVERS_TABLE: DriversTable TransactionsTable
+    TRANSACTIONS_TABLE: TransactionsTable
     IMAGE_BUCKET_NAME: moonride-media
     ACM_CERTIFICATE_ARN: arn:aws:acm:us-east-1:535002855362:certificate/ce06f91b-8929-4bdf-b955-18f5a77910c8
 
@@ -32,6 +32,7 @@ provider:
         - !Sub arn:aws:dynamodb:${self:provider.region}:${AWS::AccountId}:table/${self:provider.environment.CONNECTIONS_TABLE}
         - !Sub arn:aws:dynamodb:${self:provider.region}:${AWS::AccountId}:table/${self:provider.environment.MESSAGES_TABLE}
         - !Sub arn:aws:dynamodb:${self:provider.region}:${AWS::AccountId}:table/${self:provider.environment.DRIVERS_TABLE}
+        - !Sub arn:aws:dynamodb:${self:provider.region}:${AWS::AccountId}:table/${self:provider.environment.TRANSACTIONS_TABLE}
     - Effect: "Allow"
       Action:
         - logs:CreateLogGroup
@@ -112,10 +113,22 @@ functions:
             allowCredentials: true
 
   processPayment:
-    handler: process_payment.handler
+    handler: payment/payment.handler
     events:
       - http:
           path: payment
+          method: post
+          cors:
+            headers:
+              - Content-Type
+              - Authorization
+            allowCredentials: true
+
+  paymentCallback:
+    handler: payment/payment_callback.handler
+    events:
+      - http:
+          path: notify
           method: post
           cors:
             headers:
@@ -242,6 +255,23 @@ resources:
           - AttributeName: geohash
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
+    
+    TransactionsTable:
+      Type: "AWS::DynamoDB::Table"
+      Properties:
+        TableName:  ${self:provider.environment.TRANSACTIONS_TABLE}
+        AttributeDefinitions:
+          - AttributeName: 'transactionId'
+            AttributeType: S
+          - AttributeName: 'userId'
+            AttributeType: S
+        KeySchema:
+          - AttributeName: 'transactionId'
+            KeyType: HASH
+          - AttributeName: 'userId'
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+
 
     WebSocketApi:
       Type: 'AWS::ApiGatewayV2::Api'
