--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -12,7 +12,7 @@ provider:
     USERS_TABLE: UsersTable
     CONNECTIONS_TABLE: ConnectionsTable
     MESSAGES_TABLE: MessagesTable
-    DRIVERS_TABLE: DriversTable TransactionsTable
+    DRIVERS_TABLE: DriversTable
     TRANSACTIONS_TABLE: TransactionsTable
     IMAGE_BUCKET_NAME: moonride-media
     ACM_CERTIFICATE_ARN: arn:aws:acm:us-east-1:535002855362:certificate/ce06f91b-8929-4bdf-b955-18f5a77910c8
