new drivers api to fetch nearby carList

--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -168,6 +168,18 @@ functions:
               - Authorization
             allowCredentials: true
 
+  drivers:
+    handler: map/drivers.handler
+    events:
+      - http:
+          path: drivers
+          method: post
+          cors:
+            headers:
+              - Content-Type
+              - Authorization
+            allowCredentials: true
+
 resources:
   Resources:
     TripsTable:
