--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,18 +39,21 @@ jobs:
           python-version: '3.9'
 
       - name: Clean Python environment
+        working-directory: ./lambdas
         run: |
-          rm -rf venv  # Ensure that no old environment exists
+          rm -rf venv # Ensure that no old environment exists
           rm -rf .serverless
 
       - name: Install Python dependencies
+        working-directory: ./lambdas
         run: |
           python -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
-          pip install -r lambdas/requirements.txt
+          pip install -r requirements.txt
 
       - name: Deploy Moonrides Backend
+        working-directory: ./lambdas
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
         run: |
