--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "moonrides",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "NODE_OPTIONS=--openssl-legacy-provider nodemon server.js",
-    "lint": "NODE_OPTIONS=--openssl-legacy-provider next lint",
+    "lint": "next lint",
     "deploy": "serverless deploy"
   },
   "dependencies": {
@@ -31,6 +31,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "postcss": "^8.3.11",
+    "prettier": "^3.2.4",
     "serverless-python-requirements": "^6.1.1",
     "tailwindcss": "^2.2.19"
   }
