--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           cd lambdas  # Navigate to the lambdas directory
           npx webpack --config webpack.config.js
 
-      - name: Deploy Moonrides Backend
+      - name: Deploy Moonride Backend
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
         run: |
