--- a/lambdas/tsconfig.json
+++ b/lambdas/tsconfig.json
@@ -1,13 +1,19 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "commonjs",
-      "outDir": "./dist",
-      "rootDir": "./src",
-      "strict": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true
-    },
-    "exclude": ["node_modules"]
-  }
-  
+  "compilerOptions": {
+    "target": "ES2020",               // or your desired target
+    "module": "commonjs",             // adjust based on your project needs
+    "rootDir": ".",                   // Set rootDir to the current directory
+    "outDir": "./dist",               // Output directory for compiled files
+    "strict": true,                   // Enable strict type checking
+    "esModuleInterop": true,          // Enables emit interoperability between CommonJS and ES Modules
+    "skipLibCheck": true,             // Skip type checking of declaration files
+    "forceConsistentCasingInFileNames": true // Enforce consistent casing in file names
+  },
+  "include": [
+    "**/*.ts"                         // Include all .ts files in the project
+  ],
+  "exclude": [
+    "node_modules",                   // Exclude node_modules
+    "**/*.spec.ts"                    // Optionally exclude test files if needed
+  ]
+}
