--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -13,6 +13,7 @@
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.92",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
@@ -32,6 +33,7 @@
         "@types/uuid": "^10.0.0",
         "aws": "^0.0.3-2",
         "axios": "^1.7.7",
+        "jsonwebtoken": "^9.0.2",
         "ngeohash": "^0.6.3",
         "uuid": "^9.0.1"
     },
