--- a/lambdas/tsconfig.json
+++ b/lambdas/tsconfig.json
@@ -1,19 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",               // or your desired target
-    "module": "commonjs",             // adjust based on your project needs
-    "rootDir": ".",                   // Set rootDir to the current directory
-    "outDir": "./dist",               // Output directory for compiled files
-    "strict": true,                   // Enable strict type checking
-    "esModuleInterop": true,          // Enables emit interoperability between CommonJS and ES Modules
-    "skipLibCheck": true,             // Skip type checking of declaration files
-    "forceConsistentCasingInFileNames": true // Enforce consistent casing in file names
+    "target": "ES2017",
+    "module": "commonjs",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": [
-    "**/*.ts"                         // Include all .ts files in the project
-  ],
-  "exclude": [
-    "node_modules",                   // Exclude node_modules
-    "**/*.spec.ts"                    // Optionally exclude test files if needed
+    "src/**/*.ts",
+    "lambdas/**/*.ts"  // Ensure all .ts files are included
   ]
 }
