--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -4,7 +4,7 @@ service: moonrides
 
 provider:
   name: aws
-  runtime: nodejs18.x  # Migrated to Node.js for TypeScript support
+  runtime: nodejs18.x
   region: us-east-1
   stage: ${opt:stage, 'dev'}
   environment:
@@ -67,6 +67,7 @@ functions:
           path: login
           method: post
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
@@ -82,13 +83,14 @@ functions:
           path: user/{userId}
           method: get
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
             allowCredentials: true
 
   getRecentTrips:
-    handler:  dist/index.trips
+    handler: dist/index.trips
     package:
       include:
         - ride/*
@@ -97,13 +99,14 @@ functions:
           path: trips
           method: get
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
             allowCredentials: true
 
   requestRide:
-    handler:  dist/index.request
+    handler: dist/index.request
     package:
       include:
         - ride/*
@@ -112,13 +115,14 @@ functions:
           path: request
           method: post
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
             allowCredentials: true
 
   processPayment:
-    handler:  dist/index.payment
+    handler: dist/index.payment
     package:
       include:
         - payment/*
@@ -127,6 +131,7 @@ functions:
           path: payment
           method: post
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
@@ -142,6 +147,7 @@ functions:
           path: notify
           method: post
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
@@ -186,6 +192,7 @@ functions:
           path: directions
           method: post
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
@@ -201,6 +208,7 @@ functions:
           path: drivers
           method: post
           cors:
+            origin: '*'
             headers:
               - Content-Type
               - Authorization
@@ -307,7 +315,7 @@ resources:
           - AttributeName: geohash
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
-    
+
     TransactionsTable:
       Type: "AWS::DynamoDB::Table"
       Properties:
