--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,17 @@ jobs:
           cd lambdas  # Navigate to the lambdas directory
           npx webpack --config webpack.config.js
 
+      - name: Check package size
+        run: |
+          cd lambdas  # Navigate to the lambdas directory
+          PACKAGE_SIZE=$(du -sh dist | cut -f1)
+          echo "Package size: $PACKAGE_SIZE"
+          MAX_SIZE="50M"  # Set your maximum size limit here
+          if [ "$(echo "$PACKAGE_SIZE > $MAX_SIZE" | bc)" -eq 1 ]; then
+            echo "Error: Package size exceeds the limit of $MAX_SIZE."
+            exit 1
+          fi
+
       - name: Deploy Moonride Backend
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
