--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -18,6 +18,7 @@
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "aws-sdk": "^2.1691.0",
+        "clean-webpack-plugin": "^4.0.0",
         "eslint": "^8.0.0",
         "jest": "^29.0.0",
         "serverless-webpack": "^5.0.0",
