--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -19,6 +19,7 @@
         "@typescript-eslint/parser": "^5.0.0",
         "aws-sdk": "^2.1691.0",
         "clean-webpack-plugin": "^4.0.0",
+        "crypto-browserify": "^3.12.0",
         "eslint": "^8.0.0",
         "jest": "^29.0.0",
         "serverless-webpack": "^5.0.0",
