--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -23,34 +23,36 @@
         "eslint": "^8.0.0",
         "jest": "^29.0.0",
         "serverless-webpack": "^5.0.0",
+        "stream-browserify": "^3.0.0",
         "ts-loader": "^9.0.0",
         "typescript": "^5.0.0",
+        "vm-browserify": "^1.1.2",
         "webpack": "^5.64.4",
         "webpack-cli": "^4.9.1",
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
-        "@types/aws-sdk": "^2.7.0",
-        "@types/ngeohash": "^0.6.8",
-        "@types/uuid": "^10.0.0",
-        "aws": "^0.0.3-2",
-        "axios": "^1.7.7",
-        "jsonwebtoken": "^9.0.2",
-        "ngeohash": "^0.6.3",
-        "uuid": "^9.0.1",
         "@types/aws-lambda": "^8.10.92",
+        "@types/aws-sdk": "^2.7.0",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/ngeohash": "^0.6.8",
         "@types/node": "^18.0.0",
+        "@types/uuid": "^10.0.0",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "aws": "^0.0.3-2",
         "aws-sdk": "^2.1691.0",
+        "axios": "^1.7.7",
         "clean-webpack-plugin": "^4.0.0",
         "crypto-browserify": "^3.12.0",
         "eslint": "^8.0.0",
         "jest": "^29.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "ngeohash": "^0.6.3",
         "serverless-webpack": "^5.0.0",
         "ts-loader": "^9.0.0",
         "typescript": "^5.0.0",
+        "uuid": "^9.0.1",
         "webpack": "^5.64.4",
         "webpack-cli": "^4.9.1",
         "webpack-node-externals": "^3.0.0"
