--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -16,6 +16,7 @@ provider:
     TRANSACTIONS_TABLE: TransactionsTable
     IMAGE_BUCKET_NAME: moonride-media
     ACM_CERTIFICATE_ARN: arn:aws:acm:us-east-1:535002855362:certificate/ce06f91b-8929-4bdf-b955-18f5a77910c8
+    HOUR: ${opt:hour, '12'}  # New hour configuration
 
   iamRoleStatements:
     - Effect: "Allow"
