--- a/lambdas/serverless.yml
+++ b/lambdas/serverless.yml
@@ -18,16 +18,6 @@ provider:
     ACM_CERTIFICATE_ARN: arn:aws:acm:us-east-1:535002855362:certificate/ce06f91b-8929-4bdf-b955-18f5a77910c8
     HOUR: ${opt:hour, '12'}  # New hour configuration
 
-
-  package:
-    exclude:
-      - node_modules/**
-      - tests/**
-      - README.md
-      - venv**
-      - .require*
-      - require*
-
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -66,6 +56,13 @@ custom:
   build:
     esbuild:
       minify: true
+
+package:
+  individually: true  # Package each function individually
+  exclude:
+    - node_modules/**
+    - tests/**
+    - README.md
 
 functions:
   login:
